[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scene/SkillTree/SkillButton.gd" type="Script" id=1]
[ext_resource path="res://Scene/SkillTree/ButtonArt/hover.png" type="Texture" id=2]
[ext_resource path="res://Scene/SkillTree/ButtonArt/pressed.png" type="Texture" id=3]
[ext_resource path="res://Scene/SkillTree/ButtonArt/normal.png" type="Texture" id=4]
[ext_resource path="res://Scene/SkillTree/ButtonArt/disabled.png" type="Texture" id=5]
[ext_resource path="res://Asset/Image/icon.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.129412, 0.247059, 0.396078, 1 )

[node name="SkillButton" type="TextureButton"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )

[node name="SkillPanel" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -68.0
margin_top = 1.0
margin_right = 82.0
margin_bottom = 222.0
rect_min_size = Vector2( 0, 64 )
custom_constants/separation = 19
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillName" type="Label" parent="SkillPanel"]
margin_right = 150.0
margin_bottom = 14.0
text = "SkillName"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="SkillPanel/SkillName"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillInfo" type="Label" parent="SkillPanel"]
margin_top = 33.0
margin_right = 150.0
margin_bottom = 234.0
text = "Lorem ipsum this is filler text for now. Lorem ipsum this is filler text for now. Lorem ipsum this is filler text for now. Lorem ipsum this is filler text for now. Lorem ipsum this is filler text for now. Lorem ipsum this is filler text for now. "
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="SkillPanel/SkillInfo"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="." to="." method="_on_SkillButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_SkillButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_SkillButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SkillButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_SkillButton_pressed"]
